--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/income-tax-calculator-javascript-main//tax.html">Tax Calculator</a>
+              <a class="nav-link" href="/tax.html">Tax Calculator</a>
             </li>
         </ul>
         </div>
