--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <h1 class="head1">What is tax?</h1>
 
-        <img src="/income-tax-calculator-javascript-main/a2.jpg" alt="" class="img">
+        <img src="/a2.jpg" alt="" class="img">
 
         <br><br>
 
@@ -47,7 +47,7 @@
 
         <h1 class="head1">Why we need to pay the tax</h1>
 
-        <img src="/income-tax-calculator-javascript-main/a1.jpeg" alt="" class="img">
+        <img src="/a1.jpeg" alt="" class="img">
 
         <br><br>
 
