--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/tax.html">Tax Calculator</a>
+              <a class="nav-link" href="https://asthreeta-schaft.github.io/tax-calculator/tax.html">Tax Calculator</a>
             </li>
         </ul>
         </div>
@@ -35,7 +35,7 @@
 
         <h1 class="head1">What is tax?</h1>
 
-        <img src="/a2.jpg" alt="" class="img">
+        <img src="a2.jpg" alt="" class="img">
 
         <br><br>
 
@@ -47,7 +47,7 @@
 
         <h1 class="head1">Why we need to pay the tax</h1>
 
-        <img src="/a1.jpeg" alt="" class="img">
+        <img src="a1.jpeg" alt="" class="img">
 
         <br><br>
 
