--- a/tax.html
+++ b/tax.html
@@ -4,6 +4,7 @@
     <title>Income Tax Calculator</title>
    
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" href="bluenew.png">
 
   </head>
   <body>
